calisti/smm/analyticsDR.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: analytics-destination
  namespace: smm-demo
  labels:
    istio.io/rev: cp-v115x.istio-system
spec:
  host: analytics
  subsets:
    - name: v0
      labels:
        version: v0
    - name: v1
      labels:
        version: v1
