calisti/smm/analyticsRD.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: analytics-route
  namespace: smm-demo
  labels:
    istio.io/rev: cp-v115x.istio-system
spec:
  hosts:
    - analytics
  http:
    - route:
        - destination:
            host: analytics
            subset: v0
          weight: 10
        - destination:
            host: analytics
            subset: v1
          weight: 90
