calisti/smm/paymentsDR.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payments-destination
  namespace: smm-demo
  labels:
    istio.io/rev: cp-v115x.istio-system
spec:
  host: payments
  subsets:
    - name: v1
      labels:
        version: v1
